// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card card object empty card  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection false"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              />
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection false"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            />
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params all 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection hover"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              >
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
                    />
                  </svg>
                </button>
                <button
                  class="button square M"
                >
                  <svg
                    class="mirrored"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="none"
                      height="378.2"
                      rx="31.52"
                      stroke-miterlimit="10"
                      stroke-width="32"
                      transform="rotate(-45 312.002 311.994)"
                      width="63.03"
                      x="280.48"
                      y="122.9"
                    />
                    <path
                      d="M178.38 178.38a31.64 31.64 0 000 44.75L223.25 268 268 223.25l-44.87-44.87a31.64 31.64 0 00-44.75 0z"
                    />
                    <path
                      d="M48 192h48M90.18 90.18l33.94 33.94M192 48v48m101.82-5.82l-33.94 33.94M124.12 259.88l-33.94 33.94"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                      stroke-width="32"
                    />
                  </svg>
                </button>
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                    />
                  </svg>
                </button>
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9A7.902 7.902 0 014 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1A7.902 7.902 0 0120 12c0 4.42-3.58 8-8 8z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection hover"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            >
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
                  />
                </svg>
              </button>
              <button
                class="button square M"
              >
                <svg
                  class="mirrored"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="378.2"
                    rx="31.52"
                    stroke-miterlimit="10"
                    stroke-width="32"
                    transform="rotate(-45 312.002 311.994)"
                    width="63.03"
                    x="280.48"
                    y="122.9"
                  />
                  <path
                    d="M178.38 178.38a31.64 31.64 0 000 44.75L223.25 268 268 223.25l-44.87-44.87a31.64 31.64 0 00-44.75 0z"
                  />
                  <path
                    d="M48 192h48M90.18 90.18l33.94 33.94M192 48v48m101.82-5.82l-33.94 33.94M124.12 259.88l-33.94 33.94"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="32"
                  />
                </svg>
              </button>
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </button>
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9A7.902 7.902 0 014 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1A7.902 7.902 0 0120 12c0 4.42-3.58 8-8 8z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params block 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection hover"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              >
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9A7.902 7.902 0 014 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1A7.902 7.902 0 0120 12c0 4.42-3.58 8-8 8z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection hover"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            >
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9A7.902 7.902 0 014 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1A7.902 7.902 0 0120 12c0 4.42-3.58 8-8 8z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params book 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection hover"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              >
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection hover"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            >
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params find 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection hover"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              >
                <button
                  class="button square M"
                >
                  <svg
                    class="mirrored"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="none"
                      height="378.2"
                      rx="31.52"
                      stroke-miterlimit="10"
                      stroke-width="32"
                      transform="rotate(-45 312.002 311.994)"
                      width="63.03"
                      x="280.48"
                      y="122.9"
                    />
                    <path
                      d="M178.38 178.38a31.64 31.64 0 000 44.75L223.25 268 268 223.25l-44.87-44.87a31.64 31.64 0 00-44.75 0z"
                    />
                    <path
                      d="M48 192h48M90.18 90.18l33.94 33.94M192 48v48m101.82-5.82l-33.94 33.94M124.12 259.88l-33.94 33.94"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                      stroke-width="32"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection hover"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            >
              <button
                class="button square M"
              >
                <svg
                  class="mirrored"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="none"
                    height="378.2"
                    rx="31.52"
                    stroke-miterlimit="10"
                    stroke-width="32"
                    transform="rotate(-45 312.002 311.994)"
                    width="63.03"
                    x="280.48"
                    y="122.9"
                  />
                  <path
                    d="M178.38 178.38a31.64 31.64 0 000 44.75L223.25 268 268 223.25l-44.87-44.87a31.64 31.64 0 00-44.75 0z"
                  />
                  <path
                    d="M48 192h48M90.18 90.18l33.94 33.94M192 48v48m101.82-5.82l-33.94 33.94M124.12 259.88l-33.94 33.94"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                    stroke-width="32"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params no hover 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection false"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              />
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection false"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            />
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`card params star 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="card"
        draggable="false"
        href="/watch/1"
      >
        <div
          class="imageSection hover"
        >
          <img
            alt="title"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="360"
            src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
            srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
            style="color: transparent;"
            width="234"
          />
          <div
            class="props"
          >
            <div
              class="btns__container"
            >
              <div
                class="btns"
              >
                <button
                  class="button square M"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="info"
            >
              <div
                class="ratings"
              >
                9.0
                <div
                  class="graphs"
                >
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 62.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 80.8%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 100%;"
                    />
                  </div>
                  <div
                    class="bar"
                  >
                    <div
                      class="barValue"
                      data-testid="bar"
                      style="width: 71.8%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="singleGraph"
              >
                <span>
                  актёры
                </span>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 89.8%;"
                  />
                </div>
              </div>
              <section
                class="info__text"
              >
                <div
                  class="info__row"
                >
                  2011, 
                  Фэнтези
                </div>
                <div
                  class="info__row"
                />
              </section>
            </div>
          </div>
        </div>
        <div
          class="textSection"
          title=""
        >
          <p
            class="p M"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="card"
      draggable="false"
      href="/watch/1"
    >
      <div
        class="imageSection hover"
      >
        <img
          alt="title"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="360"
          src="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85"
          srcset="/_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=256&q=85 1x, /_next/image?url=https%3A%2F%2Fthumbs.dfs.ivi.ru%2Fstorage2%2Fcontents%2F5%2Fb%2F1a320c6f0240982ad3f287e19afa91.jpg%2F234x360%2F%3Fq%3D85&w=640&q=85 2x"
          style="color: transparent;"
          width="234"
        />
        <div
          class="props"
        >
          <div
            class="btns__container"
          >
            <div
              class="btns"
            >
              <button
                class="button square M"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="info"
          >
            <div
              class="ratings"
            >
              9.0
              <div
                class="graphs"
              >
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 62.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 80.8%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 100%;"
                  />
                </div>
                <div
                  class="bar"
                >
                  <div
                    class="barValue"
                    data-testid="bar"
                    style="width: 71.8%;"
                  />
                </div>
              </div>
            </div>
            <div
              class="singleGraph"
            >
              <span>
                актёры
              </span>
              <div
                class="bar"
              >
                <div
                  class="barValue"
                  data-testid="bar"
                  style="width: 89.8%;"
                />
              </div>
            </div>
            <section
              class="info__text"
            >
              <div
                class="info__row"
              >
                2011, 
                Фэнтези
              </div>
              <div
                class="info__row"
              />
            </section>
          </div>
        </div>
      </div>
      <div
        class="textSection"
        title=""
      >
        <p
          class="p M"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`show all card should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card"
      >
        <div
          class="imageSection show"
        >
          <p
            class="p M"
          >
            buttons.show-all
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card"
    >
      <div
        class="imageSection show"
      >
        <p
          class="p M"
        >
          buttons.show-all
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
